Add Java single-File/allow multi-module mode/menu bar background